Added Db Context, courses controller and first migration done

--- a/CoursesApp/appsettings.json
+++ b/CoursesApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "CoursesDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CoursesDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
