Revert "Added angular to courses app"
This reverts commit 175ce98777a257794ece2f1a385c49a0310b82e3.

--- a/CoursesApp/Properties/launchSettings.json
+++ b/CoursesApp/Properties/launchSettings.json
@@ -12,6 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "api/courses",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,6 +20,7 @@
     "CoursesApp": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
