- Use view models on the backend - Implemented details and delete on frontend

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/CoursesApp/wwwroot/dist
+/CoursesApp/ClientApp/package-lock.json
