--- a/CoursesApp/appsettings.json
+++ b/CoursesApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
+
   "ConnectionStrings": {
     "CoursesDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CoursesDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
